# Project_setup

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.py
core/: manage.py  test.py  test2.py
core/core/utils/: misc.py  settings.py
core/django_setup/: asgi.py  wsgi.py
core/django_setup/settings/: __init__.py  base.py  docker.py  envvars.py
core/django_setup/settings/templates/: settings.dev.py
